<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mybakingapp.ui.MainActivity"
    android:id="@+id/main_vertical_layout">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tv_recipe_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>