<resources>
    <string name="app_name">MyBakingApp</string>

    <string name="intent_mode_step">StepMode</string>
    <string name="intent_mode_ingredients">IngredientsMode</string>

    
    <string name="extra_recipe_name">recipe</string>
    <string name="extra_position_name">position</string>
    <string name="next_button">Next</string>
    <string name="pre_button">Previous</string>
    
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_default_text">The ingredients are shown here.</string>

    <string name="serving_title">Serving:</string>
    <string name="ingredient_title">Ingredient</string>

    <string name="back_recipe_detail">Steps</string>
</resources>
